--- a/style.css
+++ b/style.css
@@ -1,4 +1,124 @@
 html {
   height: 100%;
   width: 100%;
+  background-color: #11053b;
+  color: white;
 }
+
+.button1 {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 50%
+}
+
+.button1:hover{
+   background-color: green;
+   cursor: pointer;
+}
+
+.button1:active {
+  background-color: #38571a;
+  transform: scale(0.9);
+}
+
+.button2 {
+  background-color: #0061ff;
+  border: none;
+  color: white;
+  padding-top: 15px;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 50%
+}
+
+.button2:hover{
+  background-color: blue;
+  cursor: pointer;
+}
+
+.button2:active {
+  background-color: #0042aa;
+  transform: scale(0.9);
+}
+
+.button3 {
+  background-color: red;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  
+}
+
+.button3:hover {
+  background-color: #b51a00;
+  cursor: pointer;  
+}
+
+.button3:active {
+  background-color: #831100;
+  transform: scale(0.9);
+}
+
+.wrapper {
+    text-align: right;
+  padding-left: 25px;
+  padding-top: 5px;
+}
+
+.wrapper2 {
+  text-align: left;
+  padding-right: 25px;
+  padding-top: 5px;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around
+}
+
+.img {
+  width: 700px;
+  height: 500%;
+  border-style: solid;
+  border-color: white;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-right: 50%;
+  padding-left: 0px;
+  object-fit: cover;
+}
+
+.row {
+  width:100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.column1{
+  flex:1;
+}
+
+.column2{
+  flex:1;
+  text-align: center;
+}
+
+.column3{
+  flex:1;
+}
+
+.center{
+  text-align: center;
+}
+
+
